# swpppautofill_windows

./: .gitignore  IMPLEMENTATION_RECORD.md  IR_HARDENING_TIER2.md  IR_HARDENING_TIER4.md  IR_HARDENING_TIER5.md  IR_HARDENING_TIER6.md  README.md  Rain_Days_Feature_Brief.md  SWPPP_Assessment_Review.md  convert_icon.py  installer.iss  launch_gui.pyw  launch_gui.vbs  pyproject.toml  swppp_gui.spec
.github/: copilot-instructions.md
.github/templates/: IR_TEMPLATE.md
.github/workflows/: deploy.yml  generate-invite.yml
app/core/: config_example.yaml  config_manager.py  dates.py  fill.py  mesonet.py  mesonet_stations.py  model.py  odot_mapping.yaml  pdf_fields.py  rain_fill.py  session.py
app/tools/: inspect.py
app/ui_cli/: main.py
app/ui_gui/: main.py
docs/: 2026-04-14-web-ui-debug-forensic.md  SW3P_PHASE2_MASTER_PLAN_v1.0.md  SW3P_Test_Schedule_v1.0_2026-05-02.md  quickstart-admin.html
docs/implementation_history/: IR-2_Template_Versioning_v1.0_2026-05-02.md  IR-3_Public_Mailbox_v1.0_2026-05-02.md  IR-4_Scheduler_v1.0_2026-05-02.md  IR-5_PM_Dashboard_v1.0_2026-05-02.md  IR-6_Platform_Admin_Health_Dashboard_v1.0_2026-05-02.md  IR-7_Archive_Flow_v1.0_2026-05-02.md  IR-8_Mobile_Responsiveness_v1.0_2026-05-02.md  IR-9_Dashboard_Projects_Overview_v1.0_2026-05-03.md  IR_HARDENING_TIER2.md  IR_HARDENING_TIER3.md  IR_LOGIN_FIXES.md  TIER5_IMPLEMENTATION_COMPLETE.md  execution_plan.md  phase2 preplan.txt
swppp_autofill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_archive.py  test_auth.py  test_checkbox_mapping.py  test_fill.py  test_mailbox.py  test_mesonet.py  test_model.py  test_onboarding.py  test_platform_admin_dashboard.py  test_pm_dashboard.py  test_projects.py  test_rain_fill.py  test_scheduler.py  test_session.py  test_swppp_api.py  test_template_integration.py  test_template_versioning.py  test_tenant_isolation.py
tmp_output/: audit-mapping.yaml
web/: log_config.py  middleware.py
web/auth/: db.py  dependencies.py  main.py  models.py
web/data/: auth.db  swppp_sessions.db
web/frontend/swppp/: index.html
web/scheduler/: main.py  run_due_reports.py
web/scripts/: README-deploy.md  backup.sh  deploy.sh  init_admin.py
web/swppp_api/: db.py  main.py  models.py
(+20 files in other folders)
