
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "swppp-autofill"
version = "1.0.0"
description = "Weekly PDF form generator with simple GUI"
authors = [{name = "You"}]
requires-python = ">=3.10"
dependencies = ["pypdf==6.10.2", "typer==0.24.1", "python-dateutil==2.9.0.post0", "pydantic==2.13.3", "pyyaml==6.0.3", "requests==2.33.1", "tkcalendar>=1.6.1"]

[project.scripts]
swppp = "app.ui_cli.main:app"
swppp-inspect = "app.tools.inspect:main"

[project.gui-scripts]
swppp-gui = "app.ui_gui.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
